# serenitygen

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  output
src/: ]  env_reader.cpp  env_reader.h  main  main.cpp
src/commands/: author.cpp  author.h  ban.cpp  ban.h  embed.cpp  kick.cpp  kick.h  mute.cpp  unban.cpp  unmute.cpp
src/headers/: embed.h  env_reader.h  logger.h
src/headers/commands/: ban.hpp  embed.hpp  kick.hpp  mute.hpp  unban.hpp  unmute.hpp
src/headers/libraries/: command_registry.hpp  embed_utils.hpp  env_reader.hpp  logger.hpp
src/libs/: cmdregistry.cpp  command_registry.cpp  command_registry.h  dotenv.cpp  embed_utils.cpp  env_reader.cpp  envfile_reader.cpp  logger.cpp
